[tool.poetry]
name = "pyaki"
description = "pyAKI allows calculation of Acute Kidney Injury from urine output and creatinine based on KDIGO criteria."
version = "0.0.0"  # Placeholder
license = "MIT"
authors = ["ADIH MS"]
readme = "README.md"
homepage = "https://github.com/AI2MS/pyAKI"
repository = "https://github.com/AI2MS/pyAKI"
documentation = "https://github.com/AI2MS/pyAKI"
keywords = ["AKI", "Data", "ICU", "Healthcare", "Analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

[tool.poetry.urls]
Changelog = "https://github.com/AI2MS/pyAKI/releases"
Bugtracker = "https://github.com/AI2MS/pyAKI/issues"

[tool.poetry.dependencies]
python = "~3.12"
pandas = "^2.2.3"
pandas-stubs = "^2.2.3.241126"
scipy = "^1.15.0"
typer = {extras = ["all"], version = ">=0.9,<0.16"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
pytest = "^8.0.2"
coverage = "^7.6.10"
pytest-cov = "^6.0.0"
ruff = "^0.8.6"
pytest-recording = "^0.13.1"
pytest-random-order = "^1.1.1"
jupyterlab = "^4.3.4"
coveralls = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyaki-cli = "pyaki.bin.process_aki_stages:run"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
exclude = ["^tests/.*", ]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_mode = "auto"
addopts = [
    "--cov",
    "--cov-branch",
    "--cov=src",
    "--cov-report=xml",
    "--import-mode=importlib",
    "--random-order",
]
