[metadata]
name = pyAKI
description_file = README.md
long_description_content_type = text/markdown
summary = pyAKI allows calculation of Acute Kidney Injury from urine output and creatinine based on KDIGO criteria.
author = 'Jan Ernsting, Christian Porschen'
author_email = 'j.ernsting@uni-muenster.de, christian.porschen@ukmuenster.de'
url = https://github.com/AI2MS/pyAKI
project_urls=
    Source Code = https://github.com/AI2MS/pyAKI
    Documentation = https://github.com/AI2MS/pyAKI
    Bug Tracker = https://github.com/AI2MS/pyAKI/issues

download_url=https://github.com/AI2MS/pyAKI
keywords=
    AKI
classifier=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
decription-file = README.md

[files]
packages=pyAKI