[metadata]
metadata-version = 1.0
name = pyAKI
description_file = README.md
version = 0.0.1
long_description_content_type = text/markdown
summary = pyAKI allows calculation of Acute Kidney Injury from urine output and creatinine based on KDIGO criteria.
author = 'Jan Ernsting, Christian Porschen, Paul Brauckmann'
url = https://github.com/AI2MS/pyAKI
project_urls=
    Source Code = https://github.com/AI2MS/pyAKI
    Documentation = https://github.com/AI2MS/pyAKI
    Bug Tracker = https://github.com/AI2MS/pyAKI/issues

download_url=https://github.com/AI2MS/pyAKI
keywords=
    AKI
classifier=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
decription-file = README.md

[files]
packages=pyAKI